<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_menu"
        android:title="@string/menu_item_home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/goals_menu"
        android:title="@string/menu_item_pianification"
        android:icon="@drawable/ic_pianification"/>

    <item
        android:id="@+id/empty_menu"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/music_menu"
        android:title="@string/menu_item_music"
        android:icon="@drawable/ic_music"/>

    <item
        android:id="@+id/settings_menu"
        android:title="@string/menu_item_settings"
        android:icon="@drawable/ic_settings"/>

</menu>