<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.Run.StartFragment">


    <ImageView
        android:id="@+id/start_walk_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_walk"
        app:layout_constraintEnd_toStartOf="@+id/start_run_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_walk_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_walk_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_walk_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_walk_imageView" />

    <ImageView
        android:id="@+id/start_run_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_run"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_run_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_run_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_run_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_run_imageView" />

    <ImageView
        android:id="@+id/start_bike_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_bike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_run_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_bike_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_bike_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_bike_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_bike_imageView" />

    <ImageView
        android:id="@+id/start_soccer_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sports_soccer"
        app:layout_constraintEnd_toEndOf="@+id/start_walk_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_walk_imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_soccer_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_soccer_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_soccer_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_soccer_imageView" />

    <ImageView
        android:id="@+id/start_basketball_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sports_basketball"
        app:layout_constraintEnd_toEndOf="@+id/start_run_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_run_imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_basket_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_basketball_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_basketball_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_basketball_imageView" />


    <ImageView
        android:id="@+id/start_volleyball_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sports_volleyball"
        app:layout_constraintEnd_toEndOf="@+id/start_bike_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_bike_imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_volley_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_volleyball_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_volleyball_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_volleyball_imageView" />


    <ImageView
        android:id="@+id/start_swimming_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sports_swimming"
        app:layout_constraintEnd_toEndOf="@+id/start_volleyball_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_volleyball_imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_swim_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_swimming_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_swimming_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_swimming_imageView" />

    <ImageView
        android:id="@+id/start_martialarts_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sports_martialarts"
        app:layout_constraintEnd_toEndOf="@+id/start_soccer_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_soccer_imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_martialarts_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_martialarts_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_martialarts_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_martialarts_imageView" />

    <ImageView
        android:id="@+id/start_tennis_imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/accent"
        android:elevation="24dp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_sports_tennis"
        app:layout_constraintEnd_toEndOf="@+id/start_basketball_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_basketball_imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tennis_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/start_tennis_imageView"
        app:layout_constraintStart_toStartOf="@+id/start_tennis_imageView"
        app:layout_constraintTop_toBottomOf="@+id/start_tennis_imageView" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/start_button_text"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


</androidx.constraintlayout.widget.ConstraintLayout>